fixed spacing

--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -70,7 +70,7 @@
 
 .hero-subtitle {
   font-size: 15px;
-  margin-top: 39px;
+  margin-top: 25px;
   color: #f7f7ff;
 }
 
